# cmpler

./: .gitignore  Cargo.toml  README.md
cmpler-cli/: Cargo.toml
cmpler-cli/src/: args.rs  main.rs
cmpler-cli/src/commands/: build.rs  run.rs
cmpler-core/: Cargo.toml
cmpler-core/src/: driver.rs  lib.rs
cmpler-core/src/ast/: mod.rs  nodes.rs
cmpler-core/src/codegen/: error.rs  llvm_gen.rs  mod.rs
cmpler-core/src/config/: config.rs  error.rs  mod.rs
cmpler-core/src/error/: error.rs  mod.rs
cmpler-core/src/ir/: lowering.rs  mod.rs
cmpler-core/src/lexer/: error.rs  lexer.rs  mod.rs  token.rs
cmpler-core/src/logger/: logger.rs  mod.rs
cmpler-core/src/parser/: error.rs  mod.rs  parser.rs
cmpler-core/src/semantic/: analyzer.rs  error.rs  mod.rs  symbol_table.rs
cmpler-core/src/utils/: span.rs
cmpler-tests/: Cargo.toml
cmpler-tests/tests/: codegen_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_tests.rs
